# AITA

./: .dockerignore  .gitignore  .ocamlformat  Dockerfile  README.md  aita-server.opam  api-test.http  docker-compose.yml  dune-project  fly.toml  hello.py
_build/: .db  .digest-db  log
_build/default/: aita-server.dune-package  aita-server.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: aita_server.cma  aita_server.cmxa  aita_server.cmxs  aita_server.ml-gen
_build/default/lib/.aita_server.objs/byte/: aita_server.cmi  aita_server.cmo  aita_server.cmt  aita_server__Hello.cmi  aita_server__Hello.cmo  aita_server__Hello.cmt
_build/default/lib/.aita_server.objs/native/: aita_server.cmx  aita_server__Hello.cmx
_build/default/lib/.merlin-conf/: lib-aita_server
_build/default/test/.merlin-conf/: exe-test_aita_server
_build/default/test/.test_aita_server.eobjs/byte/: dune__exe__Test_aita_server.cmi  dune__exe__Test_aita_server.cmti
_build/default/test/.test_aita_server.eobjs/native/: dune__exe__Test_aita_server.cmx
_build/install/default/lib/aita-server/: META  dune-package  opam
lib/: dune  hello.ml
lib/analysis/: analysis.ml  dune
lib/anlaysis/: analysis.ml  dune
lib/data/: mistakes.txt  response_test.txt
lib/dto/: dto.ml  dune
lib/llm/: dune  llm.ml
lib/utils/: dune  utils.ml
share/mopsa/configs/c/: cell-itv-congr-bitmask.json
share/mopsa/configs/universal/: collecting.json  nonrel.json
test/: dune
